--- a/help.me/app/src/main/res/values/colors.xml
+++ b/help.me/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="green">#00cd00</color>
+    <color name="orange">#FF9E15</color>
+    <color name="red">#FF0000</color>
 </resources>
