--- a/help.me/app/src/main/res/layout/activity_resources.xml
+++ b/help.me/app/src/main/res/layout/activity_resources.xml
@@ -13,92 +13,91 @@
         android:id="@+id/textView"
         android:layout_width="344dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
+        android:layout_marginLeft="24dp"
         android:text="Resources"
+        android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="45dp"
-        tools:layout_editor_absoluteY="58dp"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"/>
+        tools:layout_editor_absoluteY="16dp" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Compond Fracdtures"
-        tools:layout_editor_absoluteY="161dp"
-        tools:layout_editor_absoluteX="54dp"/>
+        android:layout_width="155dp"
+        android:layout_height="69dp"
+        android:text="Fractures"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Cuts"
-        tools:layout_editor_absoluteY="161dp"
-        tools:layout_editor_absoluteX="195dp"/>
+        tools:layout_editor_absoluteX="205dp"
+        tools:layout_editor_absoluteY="127dp" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Burns"
-        tools:layout_editor_absoluteY="259dp"
-        tools:layout_editor_absoluteX="54dp"/>
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="209dp" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Loss of Conscionsness"
-        tools:layout_editor_absoluteY="259dp"
-        tools:layout_editor_absoluteX="195dp"/>
+        tools:layout_editor_absoluteX="206dp"
+        tools:layout_editor_absoluteY="209dp" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="CPR"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="371dp"/>
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="294dp" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Strockes"
-        tools:layout_editor_absoluteX="195dp"
-        tools:layout_editor_absoluteY="371dp"/>
+        tools:layout_editor_absoluteX="205dp"
+        tools:layout_editor_absoluteY="294dp" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Psychological Crysis"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="465dp"/>
+        tools:layout_editor_absoluteY="380dp" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Poisoning"
-        tools:layout_editor_absoluteX="216dp"
-        tools:layout_editor_absoluteY="465dp"/>
+        tools:layout_editor_absoluteX="205dp"
+        tools:layout_editor_absoluteY="380dp" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Hazardons Fluids Into Eyes"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="529dp"/>
+        tools:layout_editor_absoluteY="465dp" />
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="68dp"
         android:text="Siezures"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="529dp"/>
+        tools:layout_editor_absoluteX="205dp"
+        tools:layout_editor_absoluteY="465dp" />
 </android.support.constraint.ConstraintLayout>
