--- a/help.me/app/src/main/res/layout/activity_resources.xml
+++ b/help.me/app/src/main/res/layout/activity_resources.xml
@@ -25,6 +25,7 @@
         android:id="@+id/button"
         android:layout_width="155dp"
         android:layout_height="69dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Fractures"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
