--- a/help.me/app/src/main/res/layout/activity_resources.xml
+++ b/help.me/app/src/main/res/layout/activity_resources.xml
@@ -15,11 +15,13 @@
         android:text="Resources"
         android:textAlignment="center"
         android:textColor="#FFFF"
-        android:textSize="45dp"
+        android:textSize="45sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.002"
         app:layout_constraintStart_toEndOf="@+id/guideline4"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.031" />
 
     <Button
         android:id="@+id/button"
@@ -38,6 +40,7 @@
         android:id="@+id/button2"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Cuts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +53,7 @@
         android:id="@+id/button3"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Burns"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +67,7 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="12dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Loss of Conscionsness"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
@@ -73,6 +78,7 @@
         android:id="@+id/button5"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="CPR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +91,7 @@
         android:id="@+id/button6"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Strockes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,6 +104,7 @@
         android:id="@+id/button7"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Psychological Crysis"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +118,7 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="16dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Poisoning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
@@ -120,6 +129,7 @@
         android:id="@+id/button9"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Hazardons Fluids Into Eyes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,6 +143,7 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="16dp"
+        android:onClick="resourcesButtonClicked"
         android:text="Siezures"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
