Added sound effects to 'yes' 'no' buttons

--- a/help.me/app/src/main/res/layout/activity_life_threatening_amergency.xml
+++ b/help.me/app/src/main/res/layout/activity_life_threatening_amergency.xml
@@ -11,37 +11,48 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="61dp"
+        android:layout_width="358dp"
+        android:layout_height="186dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#ffff"
         android:textSize="50dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="152dp"/>
+        app:layout_constraintBottom_toTopOf="@+id/yesButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="1dp"/>
 
     <Button
-        android:id="@+id/button12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/yesButton"
+        android:onClick="yesButtonClicked"
+        android:layout_width="163dp"
+        android:layout_height="228dp"
         android:width="165dp"
         android:height="180dp"
         android:background="@color/green"
-        android:text="Yes"
+        android:text="YES"
         android:textSize="50dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="333dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/noButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.766"/>
 
     <Button
-        android:id="@+id/button13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/noButton"
+        android:onClick="noButtonClicked"
+        android:layout_width="173dp"
+        android:layout_height="226dp"
         android:width="165dp"
         android:height="180dp"
         android:background="@color/red"
         android:text="NO"
         android:textSize="50dp"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="333dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/yesButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        />
 
 </android.support.constraint.ConstraintLayout>
