--- a/help.me/app/src/main/res/layout/activity_medicaldetails.xml
+++ b/help.me/app/src/main/res/layout/activity_medicaldetails.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/typeTextView"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:textSize="20sp"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/detailsTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
