--- a/help.me/app/src/main/res/layout/activity_resources.xml
+++ b/help.me/app/src/main/res/layout/activity_resources.xml
@@ -27,7 +27,7 @@
         android:id="@+id/button"
         android:layout_width="155dp"
         android:layout_height="69dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="fracturesButtonClicked"
         android:text="Fractures"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/button2"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="cutsButtonClicked"
         android:text="Cuts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/button3"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="burnsButtonClicked"
         android:text="Burns"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="12dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="conscioussButtonClicked"
         android:text="Loss of Conscionsness"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
@@ -78,7 +78,7 @@
         android:id="@+id/button5"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="cprButtonClicked"
         android:text="CPR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,8 +91,8 @@
         android:id="@+id/button6"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
-        android:text="Strockes"
+        android:onClick="strokesButtonClicked"
+        android:text="Strokes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
@@ -104,8 +104,8 @@
         android:id="@+id/button7"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
-        android:text="Psychological Crysis"
+        android:onClick="crisisButtonClicked"
+        android:text="Psychological Crisis"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.104"
@@ -118,7 +118,7 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="16dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="poisoningButtonClicked"
         android:text="Poisoning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
@@ -129,7 +129,7 @@
         android:id="@+id/button9"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:onClick="resourcesButtonClicked"
+        android:onClick="fluidsButtonClicked"
         android:text="Hazardons Fluids Into Eyes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,8 +143,8 @@
         android:layout_width="155dp"
         android:layout_height="68dp"
         android:layout_marginTop="16dp"
-        android:onClick="resourcesButtonClicked"
-        android:text="Siezures"
+        android:onClick="seizuresButtonClicked"
+        android:text="Seizures"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
