--- a/help.me/app/src/main/res/values/colors.xml
+++ b/help.me/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="green">#00cd00</color>
     <color name="orange">#FF9E15</color>
-    <color name="red">#FF0000</color>
+    <color name="red">#FF1A1A</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
